--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>קליניקת ד"ר פינקלשטיין</title>
 
+    <!-- Google Fonts-->
     <link
       href="https://fonts.googleapis.com/css2?family=Aguafina+Script&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
@@ -25,14 +26,21 @@
       };
     </script>
 
+    <!-- Font Awesom-->
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+
     <!-- Optional: your own styles if needed -->
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="bg-gray-100 text-gray-800">
+  <body class="bg-gray-100 text-gray-800 pt-28 pb-16">
     <!-- 🔝 Navigation Bar -->
     <header
+      id="topPage"
       dir="ltr"
-      class="bg-white shadow-md py-4 px-6 grid grid-cols-3 items-center"
+      class="fixed top-0 left-0 w-full h-48 z-50 bg-black shadow-md py-4 px-20 grid grid-cols-3 items-center"
     >
       <!-- Logo -->
       <div class="flex justify-start items-center">
@@ -48,17 +56,52 @@
           >Dr. Finkelsetein Clinic</span
         >
       </div>
-      <!-- Mobile Menu Button -->
-      <button
-        id="menuBtn"
-        class="md:hidden text-pink-700 text-3xl focus:outline-none"
-      >
-        ☰
-      </button>
+      <!-- Mobile Menu Button and Links -->
+      <div class="relative md:hidden flex items-center justify-end h-full">
+        <!-- Mobile Menu Button -->
+        <button
+          id="menuBtn"
+          class="text-pink-700 text-5xl focus:outline-none absolute top-1/2 right-0 transform -translate-y-1/2"
+        >
+          ☰
+        </button>
+
+        <!-- Mobile Navigation Links -->
+        <div
+          id="mobileMenu"
+          class="hidden absolute top-16 right-4 flex flex-col items-end space-y-2 text-pink-700 font-medium bg-white shadow-lg p-4 rounded-md"
+        >
+          <a
+            href="#heroSection"
+            class="mobile-link hover:text-pink-500 transition text-right w-full"
+            >דף הבית</a
+          >
+          <a
+            href="#about"
+            class="mobile-link hover:text-pink-500 transition text-right w-full"
+            >אודות</a
+          >
+          <a
+            href="#services"
+            class="mobile-link hover:text-pink-500 transition text-right w-full"
+            >שירותים</a
+          >
+          <a
+            href="#contact"
+            class="mobile-link hover:text-pink-500 transition text-right w-full"
+            >צור קשר</a
+          >
+        </div>
+      </div>
       <!-- Desktop Navigation Links -->
       <nav
         class="hidden md:flex flex-col item-end justify-center space-y-1 rtl:space-x-reverse font-medium"
       >
+        <a
+          href="#heroSection"
+          class="text-pink-500 hover:text-pink-700 transition text-right font-rubik"
+          >דף הבית</a
+        >
         <a
           href="#about"
           class="text-pink-500 hover:text-pink-700 transition text-right font-rubik"
@@ -75,32 +118,14 @@
           >צור קשר</a
         >
       </nav>
-
-      <!-- Mobile Navigation Links-->
-      <div
-        id="mobileMenu"
-        class="mt-4 hidden md:hidden flex flex-col items-end space-y-2 text-pink-700 font-medium"
-      >
-        <a
-          href="#about"
-          class="mobile-link hover:text-pink-500 transition text-right w-full"
-          >אודות</a
-        >
-        <a
-          href="#services"
-          class="mobile-link hover:text-pink-500 transition text-right w-full"
-          >שירותים</a
-        >
-        <a
-          href="#contact"
-          class="mobile-link hover:text-pink-500 transition text-right w-full"
-          >צור קשר</a
-        >
-      </div>
     </header>
 
     <!-- 🌟 Hero Section -->
-    <section class="relative h-[100vh] overflow-hidden">
+    <section
+      id="heroSection"
+      class="relative h-[90vh] bg-center bg-cover flex items-center justify-center pt-32"
+      style="margin-top: 7%"
+    >
       <!-- 🎥 Video background -->
       <video
         autoplay
@@ -112,35 +137,12 @@
         <source src="videos/clinicView2.mp4" type="video/mp4" />
         הדפדפן שלך לא תומך בווידאו.
       </video>
-
-      <!-- 🧊 Overlay (darken for text readability) -->
-      <div class="absolute inset-0 bg-black bg-opacity-60 z-10"></div>
-
-      <!-- 🌟 Hero Content -->
-      <div
-        class="relative z-20 flex flex-col items-center justify-center h-full text-center text-white px-4"
-      >
-        <h1
-          class="text-4xl sm:text-5xl font-extrabold mb-4 drop-shadow-lg font-aguafina italic"
-        >
-          קליניקת ד"ר פינקלשטיין
-        </h1>
-        <p class="text-xl sm:text-2xl font-light mb-8 drop-shadow-md">
-          ברוכים הבאים לרפואה אסתטית ברמה הגבוהה ביותר
-        </p>
-        <a
-          href="#contact"
-          class="inline-block bg-white text-blue-700 font-semibold py-3 px-8 rounded-full text-lg hover:bg-blue-100 transition duration-300 shadow-md"
-        >
-          קביעת תור
-        </a>
-      </div>
     </section>
 
     <!-- 🩺 About Section -->
     <section
       id="about"
-      class="p-8 max-w-5xl mx-auto bg-white rounded-md shadow my-10"
+      class="p-6 max-w-7xl mx-auto bg-white rounded-md shadow my-10"
     >
       <h2 class="text-2xl font-bold mb-4">אודות הקליניקה</h2>
       <h3 class="text-xl font-semibold mb-2">מומחיות רפואית, יופי ואסתטיקה:</h3>
@@ -162,7 +164,7 @@
     <!-- 💉 Services Section -->
     <section
       id="services"
-      class="p-8 max-w-4xl mx-auto bg-white rounded-md shadow mb-10"
+      class="p-8 max-w-7xl mx-auto bg-white rounded-md shadow mb-10"
     >
       <h2 class="text-2xl font-bold mb-4">השירותים שלנו</h2>
       <ul class="list-disc text-lg pr-5 space-y-2">
@@ -176,7 +178,7 @@
     <!-- 📞 Contact Section -->
     <section
       id="contact"
-      class="p-8 max-w-4xl mx-auto bg-white rounded-md shadow mb-10"
+      class="p-8 max-w-7xl mx-auto bg-white rounded-md shadow mb-10"
     >
       <h2 class="text-2xl font-bold mb-4">צור קשר</h2>
       <p class="text-lg mb-2">📍 כתובת: אלון משהו, טל-אל, ישראל</p>
@@ -186,8 +188,28 @@
     </section>
 
     <!-- 🔻 Footer -->
-    <footer class="bg-gray-200 text-center py-4 text-sm">
-      &copy; קליניקת פינקלשטיין. כל הזכויות שמורות.
+    <footer
+      class="bg-black text-center py-4 text-sm fixed bottom-0 w-full flex justify-center items-center space-x-2 rtl:space-x-reverse z-50 opacity-20 hover:opacity-100 transition"
+    >
+      <a
+        href="https://www.instagram.com/dr.finkelstein_clinics/"
+        target="_blank"
+        class="text-pink-500 hover:text-pink-700 transition"
+        aria-label="Instagram"
+      >
+        <i class="fab fa-instagram text-2xl"></i>
+      </a>
+      <a
+        href="https://www.facebook.com/profile.php?id=61564889647693"
+        target="_blank"
+        class="text-blue-600 hover:text-blue-800 transition"
+        aria-label="Facebook"
+      >
+        <i class="fab fa-facebook text-2xl"></i>
+      </a>
+      <span class="text-white"
+        >&copy; קליניקת פינקלשטיין. כל הזכויות שמורות.</span
+      >
     </footer>
 
     <!-- Your JS file -->
