--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <!-- 🩺 About Section -->
     <section
       id="about"
-      class="p-6 max-w-7xl mx-auto bg-pink-300 rounded-md shadow my-10 flex items-center space-x-6 rtl:space-x-reverse"
+      class="p-6 max-w-7xl mx-auto bg-gradient-to-r from-pink-500 via-pink-400 to-pink-300 rounded-md shadow my-10 flex items-center space-x-6 rtl:space-x-reverse"
     >
       <!-- About Text-->
       <div
@@ -154,39 +154,61 @@
         </h3>
         <p class="mb-4">
           אנו גאים להציג את צוות המומחים שלנו, המשלב ידע רפואי מעמיק עם מומחיות
-          בתחום האסתטיקה הרפואית...
+          בתחום האסתטיקה הרפואית. הצוות שלנו מורכב מרופאים מנוסים ומובילים,
+          המחויבים להעניק לכם את הטיפול הטוב ביותר, תוך שימוש בטכנולוגיות
+          המתקדמות ביותר ובהתאם לסטנדרטים הגבוהים ביותר.
         </p>
         <p class="mb-4">
-          ד"ר גיל משה פינקלשטיין... מומחה לרפואת עיניים במרפאות בצפון...
+          ד"ר גיל משה פינקלשטיין –את לימודים הרפואה סיים בהצטיינות בהמשך התמחה
+          ברפואת עיניים בבית חולים נהריה וכעת עובד כ מומחה לרפואת עיניים במרפאות
+          בצפון ד"ר גיל משה פינקלשטיין הוא מומחה בעל שם בתחום רפואת העיניים, בעל
+          רישיונות רפואה ישראליים ואירופאיים. ניסיונו העשיר ברפואת עיניים תורם
+          רבות להבנת האנטומיה של הפנים, דבר חיוני בתחום האסתטיקה הרפואית.
         </p>
         <p class="mb-4">
-          ד"ר אביה פינקלשטיין – מומחית לרפואת משפחה ואסתטיקה רפואית...
+          ד"ר אביה פינקלשטיין היא רופאת משפחה מומחית, בעלת הכשרה וידע מעמיקים
+          בתחום העור והאסתטיקה הרפואית. את לימודי הרפואה סיימה בהצטיינות ואת
+          התמחותה סיימה בטכניון. כעת עובדת במרפאות בצפון כמומחיות ברפואת משפחה
+          בנוסף עברה לימודים כנאמנת כאב ועוסקת בדיקור רקמות עמוק. מומחיותה
+          מאפשרת לה להבין את ההיבטים הרפואיים הכוללים, ולהתאים את הטיפול האסתטי
+          לכל מטופל באופן אישי.
         </p>
         <h3 class="text-xl font-semibold mb-2">הידע והמומחיות שלנו:</h3>
-        <p class="mb-4">הצוות שלנו מתמחה במגוון רחב של טיפולים אסתטיים...</p>
-        <p>אנו מחויבים להעניק לכם טיפול אישי, מקצועי ובטוח...</p>
+        <p class="mb-4">
+          הצוות שלנו מתמחה במגוון רחב של טיפולים אסתטיים, תוך התחשבות במחלות
+          עיניים, אנטומיה של הפנים, מחלות מערכתיות ותרופות. אנו משתתפים באופן
+          קבוע בכנסים מקצועיים בארץ ובעולם, ומשתפים פעולה עם החברות המובילות
+          בתחום האסתטיקה הרפואית, על מנת להבטיח שאנו מעניקים לכם את הטיפולים
+          החדשניים והיעילים ביותר.
+        </p>
+        <p>
+          אנו מחויבים להעניק לכם טיפול אישי, מקצועי ובטוח, תוך שימוש בטכנולוגיות
+          המתקדמות ביותר ובהתאם לסטנדרטים הגבוהים ביותר. אנו מאמינים שיופי אמיתי
+          מתחיל מבפנים, ולכן אנו שמים דגש על הבנת הצרכים האישיים של כל מטופל,
+          ועל התאמת הטיפול האסתטי לצרכיו. מוזמנים ליצור קשר
+        </p>
       </div>
       <!-- Slideshow Container -->
       <div class="w-1/2 relative">
         <!-- Slideshow Images -->
         <div
           id="slideshow"
-          class="relative overflow-hidden rounded-md shadow-md"
+          class="relative overflow-hidden rounded-md shadow-md h-[700px]"
         >
           <img
             src="pictures/clinic/clinic_1.jpeg"
             alt="תמונה 1"
-            class="slide absolute inset-0 w-full h-[300px] object-cover opacity-100 transition-opacity duration-700"
+            class="slide absolute inset-0 w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
           <img
             src="pictures/clinic/clinic_2.jpeg"
             alt="תמונה 2"
-            class="slide absolute inset-0 w-full h-[300px] object-cover opacity-0 transition-opacity duration-700"
+            class="slide absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-700"
           />
           <img
             src="pictures/clinic/clinic_3.jpeg"
             alt="תמונה 3"
-            class="slide absolute inset-0 w-full h-[300px] object-cover opacity-0 transition-opacity duration-700"
+            class="slide absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-700"
           />
         </div>
 
@@ -211,13 +233,42 @@
       id="services"
       class="p-8 max-w-7xl mx-auto bg-white rounded-md shadow mb-10"
     >
-      <h2 class="text-2xl font-bold mb-4">השירותים שלנו</h2>
-      <ul class="list-disc text-lg pr-5 space-y-2">
-        <li>בוטוקס</li>
-        <li>עיצוב שפתיים</li>
-        <li>חומצה היאלורונית</li>
-        <li>ועוד מגוון טיפולים בהתאמה אישית</li>
-      </ul>
+      <h2 class="text-2xl font-bold mb-6 text-center">השירותים שלנו</h2>
+      <div class="grid grid-cols-2 md:grid-cols-3 gap-6">
+        <!-- Service 1 - Botox -->
+        <div class="service-item text-center">
+          <h3 class="text-lg font-semibold mb-2">בוטוקס</h3>
+          <img
+            src="pictures/botox/botox_1.jpeg"
+            alt="botox"
+            class="w-full h-[200px] object-cover rounded-md shadow-md cursor-pointer hover:opacity-80 transition"
+            onclick="handleServiceClick('botox')"
+          />
+        </div>
+
+        <!-- Service 2 - Lips -->
+        <div class="service-item text-center">
+          <h3 class="text-lg font-semibold mb-2">עיצוב שפתיים</h3>
+          <img
+            src="pictures/hyaluronicAcid/hyaluronic Acid_1.jpeg"
+            alt="lips"
+            class="w-full h-[200px] object-cover rounded-md shadow-md cursor-pointer hover:opacity-80 transition"
+            onclick="handleServiceClick('lips')"
+          />
+        </div>
+
+        <!-- Service 3 HyaluronicAcid -->
+        <div class="service-item text-center">
+          <h3 class="text-lg font-semibold mb-2">חומצה היאלורונית</h3>
+          <img
+            src="pictures/hyaluronicAcid/hyaluronic Acid_6.jpeg"
+            alt="hyaluronicAcid"
+            class="w-full h-[200px] object-cover rounded-md shadow-md cursor-pointer hover:opacity-80 transition"
+            onclick="handleServiceClick('hyaluronicAcid')"
+          />
+        </div>
+        </div>
+      </div>
     </section>
 
     <!-- 📞 Contact Section -->
@@ -227,7 +278,7 @@
     >
       <h2 class="text-2xl font-bold mb-4">צור קשר</h2>
       <p class="text-lg mb-2">📍 כתובת: אלון משהו, טל-אל, ישראל</p>
-      <p class="text-lg mb-2">📞 052-8398333</p>
+      <p class="text-lg mb-2">📞 055-564-1758</p>
       <p class="text-lg mb-2">📞 050-3757924</p>
       <p class="text-lg">✉️ gilfingil@gmail.com</p>
     </section>
