--- a/index.html
+++ b/index.html
@@ -360,12 +360,11 @@
     <!-- 📞 Contact Section -->
     <section
       id="contact"
-      class="p-8 max-w-7xl mx-auto bg-white rounded-md shadow mb-10"
+      class="p-8 max-w-7xl mx-auto bg-pink-300 rounded-md shadow mb-10"
     >
-      <h2 class="text-2xl font-bold mb-4">צור קשר</h2>
-      <p class="text-lg mb-2">📍 כתובת: אלון משהו, טל-אל, ישראל</p>
-      <p class="text-lg mb-2">📞 055-564-1758</p>
-      <p class="text-lg mb-2">📞 050-3757924</p>
+      <h2 class="text-2xl font-bold mb-4">לייעוץ והתאמה ללא עלות:</h2>
+      <p class="text-lg mb-2">📍 כתובת: האלון 16, טל-אל, ישראל</p>
+      <p class="text-lg mb-2">📞 055-5641758</p>
       <p class="text-lg">✉️ gilfingil@gmail.com</p>
     </section>
 
