update UI in mobile mode.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <!-- Logo -->
       <div class="flex justify-start items-center">
         <img
-          src="pictures/logo/logo3.png"
+          src="pictures/logo/logo1.png"
           alt="לוגו הקליניקה"
           class="h-[190px] w-[190px] rounded-full object-cover"
         />
@@ -155,27 +155,25 @@
       class="p-6 max-w-7xl mx-auto bg-gradient-to-r from-pink-500 via-pink-400 to-pink-300 rounded-md shadow my-10 flex items-center space-x-6 rtl:space-x-reverse"
     >
       <!-- About Text-->
-      <div
-        class="w-1/2 text-right about-text opacity-0 transform translate-x-10 transition-all duration-700"
-      >
-        <h2 class="text-2xl font-bold mb-4">אודות הקליניקה</h2>
-        <h3 class="text-xl font-semibold mb-2">
+      <div class="w-1/2 text-right about-text opacity-1">
+        <h2 class="text-white text-2xl font-bold mb-4">אודות הקליניקה</h2>
+        <h3 class="text-white text-xl font-semibold mb-2">
           מומחיות רפואית, יופי ואסתטיקה:
         </h3>
-        <p class="mb-4">
+        <p class="text-white mb-4">
           אנו גאים להציג את צוות המומחים שלנו, המשלב ידע רפואי מעמיק עם מומחיות
           בתחום האסתטיקה הרפואית. הצוות שלנו מורכב מרופאים מנוסים ומובילים,
           המחויבים להעניק לכם את הטיפול הטוב ביותר, תוך שימוש בטכנולוגיות
           המתקדמות ביותר ובהתאם לסטנדרטים הגבוהים ביותר.
         </p>
-        <p class="mb-4">
+        <p class="text-white mb-4">
           ד"ר גיל משה פינקלשטיין –את לימודים הרפואה סיים בהצטיינות בהמשך התמחה
           ברפואת עיניים בבית חולים נהריה וכעת עובד כ מומחה לרפואת עיניים במרפאות
           בצפון ד"ר גיל משה פינקלשטיין הוא מומחה בעל שם בתחום רפואת העיניים, בעל
           רישיונות רפואה ישראליים ואירופאיים. ניסיונו העשיר ברפואת עיניים תורם
           רבות להבנת האנטומיה של הפנים, דבר חיוני בתחום האסתטיקה הרפואית.
         </p>
-        <p class="mb-4">
+        <p class="text-white mb-4">
           ד"ר אביה פינקלשטיין היא רופאת משפחה מומחית, בעלת הכשרה וידע מעמיקים
           בתחום העור והאסתטיקה הרפואית. את לימודי הרפואה סיימה בהצטיינות ואת
           התמחותה סיימה בטכניון. כעת עובדת במרפאות בצפון כמומחיות ברפואת משפחה
@@ -183,15 +181,17 @@
           מאפשרת לה להבין את ההיבטים הרפואיים הכוללים, ולהתאים את הטיפול האסתטי
           לכל מטופל באופן אישי.
         </p>
-        <h3 class="text-xl font-semibold mb-2">הידע והמומחיות שלנו:</h3>
-        <p class="mb-4">
+        <h3 class="text-white text-xl font-semibold mb-2">
+          הידע והמומחיות שלנו:
+        </h3>
+        <p class="text-white mb-4">
           הצוות שלנו מתמחה במגוון רחב של טיפולים אסתטיים, תוך התחשבות במחלות
           עיניים, אנטומיה של הפנים, מחלות מערכתיות ותרופות. אנו משתתפים באופן
           קבוע בכנסים מקצועיים בארץ ובעולם, ומשתפים פעולה עם החברות המובילות
           בתחום האסתטיקה הרפואית, על מנת להבטיח שאנו מעניקים לכם את הטיפולים
           החדשניים והיעילים ביותר.
         </p>
-        <p>
+        <p class="text-white mb-4">
           אנו מחויבים להעניק לכם טיפול אישי, מקצועי ובטוח, תוך שימוש בטכנולוגיות
           המתקדמות ביותר ובהתאם לסטנדרטים הגבוהים ביותר. אנו מאמינים שיופי אמיתי
           מתחיל מבפנים, ולכן אנו שמים דגש על הבנת הצרכים האישיים של כל מטופל,
@@ -227,13 +227,13 @@
           id="prevBtn"
           class="absolute top-1/2 left-2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white rounded-full p-2 hover:bg-opacity-75"
         >
-          &#10094;
+          &#10095;
         </button>
         <button
           id="nextBtn"
           class="absolute top-1/2 right-2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white rounded-full p-2 hover:bg-opacity-75"
         >
-          &#10095;
+          &#10094;
         </button>
       </div>
     </section>
@@ -258,7 +258,7 @@
 
         <!-- Service 2 - Skin Booster -->
         <div class="service-item text-center">
-          <h3 class="text-lg font-semibold mb-2">סקין בוסטר ומרקם עור</h3>
+          <h3 class="text-lg font-semibold mb-2">סקין בוסטר</h3>
           <img
             src="pictures/servicies/skinBooster.jpeg"
             alt="skinBooster"
