change the navigation bar in Desktop view to be horizontal instead of vertical

--- a/index.html
+++ b/index.html
@@ -100,31 +100,31 @@
       </div>
       <!-- Desktop Navigation Links -->
       <nav
-        class="hidden md:flex w-40 flex-col item-end justify-center space-y-1 rtl:space-x-reverse font-medium absolute top-0 right-0 h-full pr-4"
+        class="hidden md:flex absolute bottom-0 left-0 w-full justify-start items-end flex-row-reverse space-x-6 rtl:space-x-reverse px-6 pb-4"
       >
         <a
           href="#heroSection"
-          class="text-pink-500 hover:text-pink-700 transition text-right font-rubik"
+          class="text-pink-500 hover:text-pink-700 transition text-lg font-rubik"
           >דף הבית</a
         >
         <a
           href="#about"
-          class="text-pink-500 hover:text-pink-700 transition text-right font-rubik"
+          class="text-pink-500 hover:text-pink-700 transition text-lg font-rubik"
           >אודות</a
         >
         <a
           href="#services"
-          class="text-pink-500 hover:text-pink-700 transition text-right"
+          class="text-pink-500 hover:text-pink-700 transition text-lg"
           >שירותים</a
         >
         <a
           href="#recommendations"
-          class="text-pink-500 hover:text-pink-700 transition text-right"
+          class="text-pink-500 hover:text-pink-700 transition text-lg"
           >המלצות</a
         >
         <a
           href="#contact"
-          class="text-pink-500 hover:text-pink-700 transition text-right"
+          class="text-pink-500 hover:text-pink-700 transition text-lg"
           >צור קשר</a
         >
       </nav>
@@ -420,4 +420,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-```
