--- a/index.html
+++ b/index.html
@@ -304,56 +304,64 @@
       class="p-8 max-w-7xl mx-auto bg-pink-100 rounded-md shadow mb-10"
     >
       <h2 class="text-2xl font-bold mb-6 text-center">המלצות</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-        <!-- Recommendation 1 -->
-        <div class="bg-white p-6 rounded-md shadow-md">
-          <img
-            src="pictures/recommendations/reco_1.jpeg"
-            alt="Recommendation 1"
-            class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer hover:opacity-80 transition"
-            onclick="showImageModal('pictures/recommendations/reco_1.jpeg')"
-          />
-        </div>
+      <div class="relative overflow-hidden">
+        <!-- Left Arrow -->
+        <button
+          id="prevArrow"
+          class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-pink-500 text-white p-2 rounded-full shadow-md z-10"
+        >
+          &#10095;
+        </button>
 
-        <!-- Recommendation 2 -->
-        <div class="bg-white p-6 rounded-md shadow-md">
-          <img
-            src="pictures/recommendations/reco_2.jpeg"
-            alt="Recommendation 2"
-            class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer hover:opacity-80 transition"
-            onclick="showImageModal('pictures/recommendations/reco_2.jpeg')"
-          />
-        </div>
+        <!-- Recommendations List -->
+        <ul
+          id="recommendationsList"
+          class="flex transition-transform duration-500 ease-in-out"
+        >
+          <li class="flex-shrink-0 w-1/3 px-2">
+            <img
+              src="pictures/recommendations/reco_1.jpeg"
+              alt="Recommendation 1"
+              class="w-full h-[300px] object-contain rounded-md shadow-md"
+            />
+          </li>
+          <li class="flex-shrink-0 w-1/3 px-2">
+            <img
+              src="pictures/recommendations/reco_2.jpeg"
+              alt="Recommendation 2"
+              class="w-full h-[300px] object-contain rounded-md shadow-md"
+            />
+          </li>
+          <li class="flex-shrink-0 w-1/3 px-2">
+            <img
+              src="pictures/recommendations/reco_3.jpeg"
+              alt="Recommendation 3"
+              class="w-full h-[300px] object-contain rounded-md shadow-md"
+            />
+          </li>
+          <li class="flex-shrink-0 w-1/3 px-2">
+            <img
+              src="pictures/recommendations/reco_4.jpeg"
+              alt="Recommendation 4"
+              class="w-full h-[300px] object-contain rounded-md shadow-md"
+            />
+          </li>
+          <li class="flex-shrink-0 w-1/3 px-2">
+            <img
+              src="pictures/recommendations/reco_5.jpeg"
+              alt="Recommendation 5"
+              class="w-full h-[300px] object-contain rounded-md shadow-md"
+            />
+          </li>
+        </ul>
 
-        <!-- Recommendation 3 -->
-        <div class="bg-white p-6 rounded-md shadow-md">
-          <img
-            src="pictures/recommendations/reco_3.jpeg"
-            alt="Recommendation 3"
-            class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer hover:opacity-80 transition"
-            onclick="showImageModal('pictures/recommendations/reco_3.jpeg')"
-          />
-        </div>
-
-        <!-- Recommendation 4 -->
-        <div class="bg-white p-6 rounded-md shadow-md">
-          <img
-            src="pictures/recommendations/reco_4.jpeg"
-            alt="Recommendation 4"
-            class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer hover:opacity-80 transition"
-            onclick="showImageModal('pictures/recommendations/reco_4.jpeg')"
-          />
-        </div>
-
-        <!-- Recommendation 5 -->
-        <div class="bg-white p-6 rounded-md shadow-md">
-          <img
-            src="pictures/recommendations/reco_5.jpeg"
-            alt="Recommendation 5"
-            class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer hover:opacity-80 transition"
-            onclick="showImageModal('pictures/recommendations/reco_5.jpeg')"
-          />
-        </div>
+        <!-- Right Arrow -->
+        <button
+          id="nextArrow"
+          class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-pink-500 text-white p-2 rounded-full shadow-md z-10"
+        >
+          &#10094;
+        </button>
       </div>
     </section>
 
