--- a/index.html
+++ b/index.html
@@ -322,35 +322,40 @@
             <img
               src="pictures/recommendations/reco_1.jpeg"
               alt="Recommendation 1"
-              class="w-full h-[300px] object-contain rounded-md shadow-md"
+              class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer"
+              onclick="showImageModal('pictures/recommendations/reco_1.jpeg')"
             />
           </li>
           <li class="flex-shrink-0 w-1/3 px-2">
             <img
               src="pictures/recommendations/reco_2.jpeg"
               alt="Recommendation 2"
-              class="w-full h-[300px] object-contain rounded-md shadow-md"
+              class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer"
+              onclick="showImageModal('pictures/recommendations/reco_2.jpeg')"
             />
           </li>
           <li class="flex-shrink-0 w-1/3 px-2">
             <img
               src="pictures/recommendations/reco_3.jpeg"
               alt="Recommendation 3"
-              class="w-full h-[300px] object-contain rounded-md shadow-md"
+              class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer"
+              onclick="showImageModal('pictures/recommendations/reco_3.jpeg')"
             />
           </li>
           <li class="flex-shrink-0 w-1/3 px-2">
             <img
               src="pictures/recommendations/reco_4.jpeg"
               alt="Recommendation 4"
-              class="w-full h-[300px] object-contain rounded-md shadow-md"
+              class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer"
+              onclick="showImageModal('pictures/recommendations/reco_4.jpeg')"
             />
           </li>
           <li class="flex-shrink-0 w-1/3 px-2">
             <img
               src="pictures/recommendations/reco_5.jpeg"
               alt="Recommendation 5"
-              class="w-full h-[300px] object-contain rounded-md shadow-md"
+              class="w-full h-[300px] object-contain rounded-md shadow-md cursor-pointer"
+              onclick="showImageModal('pictures/recommendations/reco_5.jpeg')"
             />
           </li>
         </ul>
