--- a/index.html
+++ b/index.html
@@ -298,6 +298,34 @@
       <!-- Content will be dynamically inserted here -->
     </section>
 
+    <!-- Before-After Section -->
+    <section
+      id="before-after"
+      class="p-8 max-w-7xl mx-auto bg-white rounded-md shadow mb-10 hidden"
+    >
+      <h2 class="text-2xl font-bold mb-6 text-center">לפני ואחרי</h2>
+      <div class="relative overflow-hidden rounded-md shadow-md">
+        <!-- Slideshow Container -->
+        <div id="beforeAfterSlideshow" class="relative h-[400px]">
+          <!-- Images will be dynamically inserted here -->
+        </div>
+
+        <!-- Navigation Buttons -->
+        <button
+          id="beforeAfterPrevBtn"
+          class="absolute top-1/2 left-2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white rounded-full p-2 hover:bg-opacity-75"
+        >
+          &#10095;
+        </button>
+        <button
+          id="beforeAfterNextBtn"
+          class="absolute top-1/2 right-2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white rounded-full p-2 hover:bg-opacity-75"
+        >
+          &#10094;
+        </button>
+      </div>
+    </section>
+
     <!-- 📝 Recommendations Section -->
     <section
       id="recommendations"
