--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <!-- Logo -->
       <div class="flex justify-start items-center">
         <img
-          src="pictures/logo/logo1.png"
+          src="pictures/logo/logo6.png"
           alt="לוגו הקליניקה"
-          class="h-[190px] w-[190px] rounded-full object-cover"
+          class="logo-img [150px] w-[150px] rounded-full object-cover bg-white p-2 shadow-lg"
         />
       </div>
       <!-- Title-->
