fix before-after pictures in mobile mode.

--- a/index.html
+++ b/index.html
@@ -301,12 +301,12 @@
     <!-- Before-After Section -->
     <section
       id="before-after"
-      class="p-8 max-w-7xl mx-auto bg-white rounded-md shadow mb-10 hidden"
+      class="p-8 max-w-7xl mx-auto bg-white rounded-md shadow mb-10 hidden justify-center"
     >
       <h2 class="text-2xl font-bold mb-6 text-center">לפני ואחרי</h2>
       <div class="relative overflow-hidden rounded-md shadow-md">
         <!-- Slideshow Container -->
-        <div id="beforeAfterSlideshow" class="relative h-[400px]">
+        <div id="beforeAfterSlideshow" class="mx-auto relative h-[400px]">
           <!-- Images will be dynamically inserted here -->
         </div>
 
