update about section

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       class="p-6 max-w-7xl mx-auto bg-gradient-to-r from-pink-500 via-pink-400 to-pink-300 rounded-md shadow my-10 flex items-center space-x-6 rtl:space-x-reverse"
     >
       <!-- About Text-->
-      <div class="w-1/2 text-right about-text opacity-1">
+      <div class="w-full md:w-1/2 text-right about-text opacity-1">
         <h2 class="text-white text-2xl font-bold mb-4">אודות הקליניקה</h2>
         <h3 class="text-white text-xl font-semibold mb-2">
           מומחיות רפואית, יופי ואסתטיקה:
@@ -199,26 +199,26 @@
         </p>
       </div>
       <!-- Slideshow Container -->
-      <div class="w-1/2 relative">
+      <div class="w-full md:w-1/2 relative flex justify-center">
         <!-- Slideshow Images -->
         <div
           id="slideshow"
-          class="relative overflow-hidden rounded-md shadow-md h-[700px]"
+          class="relative overflow-hidden rounded-md shadow-md h-[700px] mx-auto max-w-[90%] sm:max-w-[500px] w-full"
         >
           <img
             src="pictures/clinic/clinic_1.jpeg"
             alt="תמונה 1"
-            class="slide absolute inset-0 w-full h-full object-cover opacity-100 transition-opacity duration-700"
+            class="slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
           <img
             src="pictures/clinic/clinic_2.jpeg"
             alt="תמונה 2"
-            class="slide absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-700"
+            class="slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
           <img
             src="pictures/clinic/clinic_3.jpeg"
             alt="תמונה 3"
-            class="slide absolute inset-0 w-full h-full object-cover opacity-0 transition-opacity duration-700"
+            class="slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
         </div>
 
