--- a/index.html
+++ b/index.html
@@ -401,12 +401,108 @@
     <!-- 📞 Contact Section -->
     <section
       id="contact"
-      class="p-8 max-w-7xl mx-auto bg-pink-300 rounded-md shadow mb-10"
+      class="p-8 max-w-7xl mx-auto bg-pink-300 rounded-md shadow mb-10 flex flex-col md:flex-row justify-between"
     >
-      <h2 class="text-2xl font-bold mb-4">לייעוץ והתאמה ללא עלות:</h2>
-      <p class="text-lg mb-2">📍 כתובת: האלון 16, טל-אל, ישראל</p>
-      <p class="text-lg mb-2">📞 055-5641758</p>
-      <p class="text-lg">✉️ gilfingil@gmail.com</p>
+      <!-- Contact Info -->
+      <div class="w-full md:w-1/2 mb-6 md:mb-0">
+        <h2 class="text-2xl font-bold mb-4">לייעוץ והתאמה ללא עלות:</h2>
+        <p class="text-lg mb-2">📍 כתובת: האלון 16, טל-אל, ישראל</p>
+        <p class="text-lg mb-2">📞 055-5641758</p>
+        <p class="text-lg">✉️ gilfingil@gmail.com</p>
+      </div>
+
+      <!-- User Input Form -->
+      <div class="w-full md:w-2/3 bg-white p-6 rounded-md shadow-md">
+        <h3 class="text-xl font-bold mb-4 text-center">
+          השאירו פרטים ונחזור אליכם
+        </h3>
+        <form id="contactForm" class="space-y-4">
+          <!-- First Row: First Name and Last Name -->
+          <div class="flex flex-wrap md:flex-nowrap gap-4">
+            <!-- First Name -->
+            <div class="flex-1">
+              <label
+                for="firstName"
+                class="block text-sm font-medium text-gray-700"
+                >שם פרטי:</label
+              >
+              <input
+                type="text"
+                id="firstName"
+                name="firstName"
+                class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-pink-500 focus:border-pink-500"
+                placeholder="הכנס שם פרטי"
+              />
+            </div>
+
+            <!-- Last Name -->
+            <div class="flex-1">
+              <label
+                for="lastName"
+                class="block text-sm font-medium text-gray-700"
+                >שם משפחה:</label
+              >
+              <input
+                type="text"
+                id="lastName"
+                name="lastName"
+                class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-pink-500 focus:border-pink-500"
+                placeholder="הכנס שם משפחה"
+              />
+            </div>
+          </div>
+
+          <!-- Second Row: Phone Number and Desired Treatment -->
+          <div class="flex flex-wrap md:flex-nowrap gap-4">
+            <!-- Phone Number -->
+            <div class="flex-1">
+              <label
+                for="phoneNumber"
+                class="block text-sm font-medium text-gray-700"
+                >מספר טלפון:</label
+              >
+              <input
+                type="tel"
+                id="phoneNumber"
+                name="phoneNumber"
+                class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-pink-500 focus:border-pink-500"
+                placeholder="הכנס מספר טלפון"
+              />
+            </div>
+
+            <!-- Desired Treatment -->
+            <div class="flex-1">
+              <label
+                for="treatment"
+                class="block text-sm font-medium text-gray-700"
+                >טיפול מבוקש:</label
+              >
+              <select
+                id="treatment"
+                name="treatment"
+                class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-pink-500 focus:border-pink-500"
+              >
+                <option value="" disabled selected>בחר טיפול</option>
+                <option value="botox">בוטוקס</option>
+                <option value="skinBooster">סקין בוסטר</option>
+                <option value="hyaluronicAcid">חומצה היאלורונית</option>
+                <option value="prp">Prp</option>
+              </select>
+            </div>
+          </div>
+
+          <!-- Submit Button -->
+          <div class="text-center">
+            <button
+              type="button"
+              id="submitBtn"
+              class="bg-pink-500 text-white px-4 py-2 rounded-md shadow hover:bg-pink-600 transition"
+            >
+              שלח פרטים
+            </button>
+          </div>
+        </form>
+      </div>
     </section>
 
     <!-- 🔻 Footer -->
