add full screen before-after images functionality.

--- a/index.html
+++ b/index.html
@@ -208,17 +208,17 @@
           <img
             src="pictures/clinic/clinic_1.jpeg"
             alt="תמונה 1"
-            class="slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
+            class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
           <img
             src="pictures/clinic/clinic_2.jpeg"
             alt="תמונה 2"
-            class="slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
+            class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
           <img
             src="pictures/clinic/clinic_3.jpeg"
             alt="תמונה 3"
-            class="slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
+            class="about_slide left-1/2 top-1/2 translate-x-[-50%] translate-y-[-50%] absolute w-full h-full object-cover opacity-100 transition-opacity duration-700"
           />
         </div>
 
