--- a/index.html
+++ b/index.html
@@ -505,6 +505,21 @@
       </div>
     </section>
 
+    <!-- Spinner Modal -->
+    <div
+      id="spinnerModal"
+      class="fixed top-0 left-0 w-full h-full bg-black bg-opacity-20 flex items-center justify-center z-50 hidden"
+    >
+      <div
+        class="bg-white p-6 rounded-xl shadow-lg flex flex-col items-center space-y-3"
+      >
+        <div
+          class="animate-spin rounded-full h-12 w-12 border-t-4 border-pink-500 border-solid"
+        ></div>
+        <p class="text-gray-700 font-medium">שולח את הפרטים...</p>
+      </div>
+    </div>
+
     <!-- 🔻 Footer -->
     <footer
       class="bg-black text-center py-4 text-sm fixed bottom-0 w-full flex justify-center items-center space-x-2 rtl:space-x-reverse z-50 opacity-20 hover:opacity-100 transition"
