Add Email to User Details.

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 type="tel"
                 id="phoneNumber"
                 name="phoneNumber"
-                class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:ring-pink-500 focus:border-pink-500"
+                class="mt-1 block w-full text-right border-gray-300 rounded-md shadow-sm focus:ring-pink-500 focus:border-pink-500"
                 placeholder="הכנס מספר טלפון"
               />
             </div>
@@ -449,15 +449,41 @@
             </div>
           </div>
 
-          <!-- Submit Button -->
-          <div class="text-center">
-            <button
-              type="button"
-              id="submitBtn"
-              class="bg-pink-500 text-white px-4 py-2 rounded-md shadow hover:bg-pink-600 transition"
-            >
-              שלח פרטים
-            </button>
+          <!-- third Row: Email and Submit Btn -->
+          <div class="flex flex-wrap md:flex-nowrap gap-4">
+            <!-- Email -->
+            <div class="flex-1">
+              <label
+                for="email"
+                class="block text-sm font-medium text-gray-700"
+              >
+                הכנס דואר אלקטרוני:
+              </label>
+              <div class="relative mt-1">
+                <div
+                  class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none"
+                >
+                  <i class="fas fa-envelope text-gray-400"></i>
+                </div>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  placeholder="הכנס דואר אלקטרוני"
+                  class="block w-full pr-10 border-gray-300 rounded-md shadow-sm focus:ring-pink-500 focus:border-pink-500"
+                />
+              </div>
+            </div>
+            <!-- Submit Button -->
+            <div class="flex-1 flex items-end">
+              <button
+                type="button"
+                id="submitBtn"
+                class="w-full bg-pink-500 text-white px-4 py-2 rounded-md shadow hover:bg-pink-600 transition"
+              >
+                שלח פרטים
+              </button>
+            </div>
           </div>
         </form>
       </div>
