Add sitemap.xml and insert main title into h1 tag.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>קליניקת ד"ר פינקלשטיין</title>
-
-    <!-- Google Fonts-->
+    <meta
+      name="Description"
+      content="קליניקת דוקטור פינקלשטיין.
+              ייעוץ ראשוני ללא עלות.
+              מרפאת אסתטיקה.
+              טיפולים מתקדמים.
+              בוטוקס.
+              חומצה היאלורונית. 
+              סקין בוסטר. PRP. "
+    />
+    Google Fonts-- />
     <link
       href="https://fonts.googleapis.com/css2?family=Aguafina+Script&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
@@ -52,9 +61,9 @@
       </div>
       <!-- Title-->
       <div class="text-center flex-1 hidden md:block">
-        <span class="text-6xl font-bold text-pink-400 font-libre italic"
-          >Dr. Finkelstein Clinics</span
-        >
+        <span class="text-6xl font-bold text-pink-400 font-libre italic">
+          <h1>Dr. Finkelstein Clinics</h1>
+        </span>
       </div>
       <!-- Mobile Menu Button and Links -->
       <div class="relative md:hidden flex items-center justify-end h-full">
