fix sitemap.xml .

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
               חומצה היאלורונית. 
               סקין בוסטר. PRP. "
     />
-    Google Fonts-- />
+    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Aguafina+Script&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
