Add Accessibility Menu to index.html .

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
       </div>
     </div>
 
-    <!-- 🔻 Footer -->
+    <!-- Footer -->
     <footer
       class="bg-black text-center py-4 text-sm fixed bottom-0 w-full flex justify-center items-center space-x-2 rtl:space-x-reverse z-50 opacity-20 hover:opacity-100 transition"
     >
@@ -563,5 +563,15 @@
 
     <!-- Your JS file -->
     <script src="script.js"></script>
+
+    <!-- Accessibility Menu -->
+    <script>
+      (function (d) {
+        var s = d.createElement("script");
+        s.src = "https://nagish.li/access.js";
+        s.defer = true;
+        d.head.appendChild(s);
+      })(document);
+    </script>
   </body>
 </html>
