--- a/index.html
+++ b/index.html
@@ -565,13 +565,9 @@
     <script src="script.js"></script>
 
     <!-- Accessibility Menu -->
-    <script>
-      (function (d) {
-        var s = d.createElement("script");
-        s.src = "https://nagish.li/access.js";
-        s.defer = true;
-        d.head.appendChild(s);
-      })(document);
-    </script>
+    <script
+      src="https://cdn.userway.org/widget.js"
+      data-account="dMoQTKzBXa"
+    ></script>
   </body>
 </html>
