change Accessibility Menu location.

--- a/index.html
+++ b/index.html
@@ -568,6 +568,7 @@
     <script
       src="https://cdn.userway.org/widget.js"
       data-account="dMoQTKzBXa"
+      data-position="6"
     ></script>
   </body>
 </html>
