--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>קליניקת ד"ר פינקלשטיין</title>
+    <title>מרפאות דוקטור פינקלשטיין- אסתטיקה רפואית</title>
     <meta
       name="Description"
       content="קליניקת דוקטור פינקלשטיין.
