--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- Optional: your own styles if needed -->
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body class="bg-gray-100 text-gray-800 pt-28 pb-16">
+  <body class="bg-gray-100 text-gray-800 pt-16 md:pt-36 pb-16">
     <!-- 🔝 Navigation Bar -->
     <header
       id="topPage"
@@ -150,7 +150,7 @@
       <img
         src="pictures/HeroSection/MobileHeroSectionImageWithTitle.jpeg"
         alt="קליניקת פינקלשטיין"
-        class="block md:hidden w-full h-full object-contain object-top"
+        class="block md:hidden w-full h-full object-cover object-top"
       />
     </section>
 
@@ -459,7 +459,7 @@
               </label>
               <div class="relative mt-1">
                 <div
-                  class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none"
+                  class="hidden md:flex absolute inset-y-0 right-0 pr-3 items-center pointer-events-none"
                 >
                   <i class="fas fa-envelope text-gray-400"></i>
                 </div>
@@ -468,7 +468,7 @@
                   id="email"
                   name="email"
                   placeholder="הכנס דואר אלקטרוני"
-                  class="block w-full pr-10 border-gray-300 rounded-md shadow-sm focus:ring-pink-500 focus:border-pink-500"
+                  class="block w-full border-gray-300 rounded-md shadow-sm focus:ring-pink-500 focus:border-pink-500 pr-0 md:pr-10"
                 />
               </div>
             </div>
@@ -504,16 +504,16 @@
 
     <!-- Footer -->
     <footer
-      class="bg-[#fdf0e7] text-center py-4 text-sm fixed bottom-0 w-full flex justify-center items-center space-x-2 rtl:space-x-reverse z-50 opacity-20 hover:opacity-100 transition"
+      class="bg-[#fdf0e7] text-center py-4 text-sm fixed bottom-0 w-full flex justify-center items-center z-50 opacity-20 hover:opacity-100 transition"
       dir="ltr"
     >
       <div class="flex justify-between items-center w-full px-6">
         <!-- Left: Copyright -->
-        <span class="text-black text-sm font-semibold">
+        <span class="hidden md:inline text-black text-sm font-semibold">
           &copy; מרפאות דוקטור פינקלשטיין. כל הזכויות שמורות
         </span>
 
-        <div class="flex space-x-4 items-end justify-end" dir="ltr">
+        <div class="flex justify-center space-x-4" dir="ltr">
           <!-- Instegram -->
           <a
             href="https://www.instagram.com/dr.finkelstein_clinics/"
