--- a/index.html
+++ b/index.html
@@ -513,7 +513,10 @@
           &copy; מרפאות דוקטור פינקלשטיין. כל הזכויות שמורות
         </span>
 
-        <div class="flex justify-center space-x-4" dir="ltr">
+        <div
+          class="flex justify-center md:justify-end space-x-4 w-full md:w-auto"
+          dir="ltr"
+        >
           <!-- Instegram -->
           <a
             href="https://www.instagram.com/dr.finkelstein_clinics/"
